<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/restart_button"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:onClick="buttonClicked"
        android:text="@string/restartButton"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_button" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:onClick="buttonClicked"
        android:text="@string/pauseButton"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/title"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="41dp"
        android:background="@android:color/holo_green_light"
        android:onClick="buttonClicked"
        android:text="@string/true_title"
        app:layout_constraintStart_toEndOf="@+id/prev_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_green_light"
        android:onClick="buttonClicked"
        android:text="@string/false_title"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="buttonClicked"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginTop="41dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="buttonClicked"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <TextView
        android:id="@+id/counter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/counter_question"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalNumberofQuestions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/totalNumberofQuestions"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/countdown_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/timerStartValue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/totalNumberofQuestions_textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="122dp"
        android:layout_height="95dp"
        android:background="@android:drawable/ic_menu_slideshow"
        android:onClick="buttonClicked"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/highScore_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/aclonica"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/counter_textView"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>